--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ ul.sq {
   <li>Buy a hydroflask </li>
 </ul>
  
-    <img src="images/turtle.jpg" alt="turtle swimming" width="50%" height="50%">
+    <img src="turtle.jpg" alt="turtle swimming" width="50%" height="50%">
 
     
     
