--- a/index.html
+++ b/index.html
@@ -19,14 +19,42 @@
 </div>
 <font color="white">
 <div style="padding: 70px">
-<b><p> things to hire me for</p></b>
-<ul>
+   <p>I'm a young kid who like to make music on my computr.The thing that inspired me was looking at nature and hearing all the sounds making beats in my head.</p>
+    
+    <b><p> things to hire me for</p></b>
+    <ul>
   <li>backing track</li>
   <li>Bar and Batmitzah</li>
   <li>school dances</li>
 </ul>
 </div>
     <div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/739930897&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></div>
+<div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+<option value= "south carlina">south carolina</option>
+      <option value="pensilvana">pennylvania</option>
+    </select>
+ 
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+    <div class="parallax"></div>
+
+<div style="height:1000px;background-color:red;font-size:36px">
+    
 </font>
 </body>
 </html>
